# ECS

./: .gitignore  CMakeLists.txt  README.md
inc/: ecs.h  element.h  generator.h  handle.h  meta.h  pipeline.h  pool.h  registry.h  traits.h  view.h
inc/containers/: chained.h  packed.h  sparse.h  sparse_list.h
inc/content/: attrib_id.h  attribute.h  component.h  components.h  event.h  events.h  handle.h  handles.h  id.h  mutex.h  policy.h  resource.h  resources.h
inc/core/: _meta.h  fwd.h  macros.h  meta.h  traits.h
inc/services/: generator.h  invoker.h  pool.h  registry.h  view.h
inc/util/: view_element.h
